Congestion Control refactoring